# TFG-Code

./: README.md
TFG/src/: CMakeLists.txt
TFG/src/cpp/realsense/: CMakeLists.txt  Description.doc  cpp_realsense.cpp
TFG/src/csharp/: Common.cs
TFG/src/csharp/image/: CMakeLists.txt  Description.doc  Program.cs
TFG/src/csharp/image/Properties/: AssemblyInfo.cs
TFG/src/csharp/interactive/: CMakeLists.txt  DepthMapHelpers.cs  Description.doc  InfoDialog.xaml  InfoDialog.xaml.cs  LogOutput.cs  PoseEstimationRendering.cs  Program.cs  Window.xaml  Window.xaml.cs  WindowCameraControlOptions.cs  WindowRenderingControlOptions.cs
TFG/src/csharp/interactive/Properties/: AssemblyInfo.cs
TFG/src/csharp/realsense/: CMakeLists.txt  Description.doc  Program.cs
TFG/src/csharp/videoseries/: CMakeLists.txt  Description.doc  Program.cs
TFG/src/dep/opencv/x64/vc15/lib/: opencv_world401.lib  opencv_world401d.lib
TFG/src/dep/realsense/lib/: glfw3.lib  realsense-file.lib  realsense2-gl.lib  realsense2.lib  tm.lib  uvc_fw.lib
TFG/src/dep/realsense/lib/cmake/glfw3/: glfw3Targets.cmake
TFG/src/dep/realsense/lib/cmake/realsense2/: realsense2Targets-release.cmake  realsense2Targets.cmake
TFG/src/dep/realsense/lib/pkgconfig/: glfw3.pc  realsense2-gl.pc  realsense2.pc
TFG/src/python/: Description.doc  estimate-keypoints.py
